Initial commit: Personal website setup

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
         <section id="home" class="hero">
-            <h1>Welcome to Nathan's webpoop</h1>
+            <h1>Welcome to Nathan's first website</h1>
             <p>I'm a passionate developer building amazing things</p>
         </section>
 
