--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <main>
         <section id="home" class="hero">
-            <h1>Welcome to Nathan's first website</h1>
+            <h1>Oh hey! I'm Nathan.</h1>
+            <img src="images/self_portrait.jpeg" alt="Nathan Zhu" class="profile-pic">
             <p>I'm a passionate developer building amazing things</p>
         </section>
 
