testing whether a small change will update the git hosted website

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
         <section id="home" class="hero">
-            <h1>Oh hey! I'm Nathan.</h1>
+            <h1>Oh hello! I'm Nathan.</h1>
             <img src="images/self_portrait.jpeg" alt="Nathan Zhu" class="profile-pic">
             <p>I'm a passionate developer building amazing things</p>
         </section>
