adding extra text, making the middle container a button

--- a/index.html
+++ b/index.html
@@ -24,44 +24,54 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <h1>Oh hello! I'm Nathan.</h1>
-            <img src="images/self_portrait.jpeg" alt="Nathan Zhu" class="profile-pic">
-            <p>I'm a passionate developer building amazing things</p>
-        </section>
+        <div class="container">
+            <section id="home" class="hero">
+                <h1>Hola. Me llamo Natan</h1>
+                <img src="images/self_portrait.jpeg" alt="Nathan Zhu" class="profile-pic">
+                <p>Today is May 8th, 2025 (for me right now). I woke up pretty late this morning and decided to back to sleep. Around 10:50am, I decided to get up. I know it was exactly 10:50am because
+                    I had a group meeting with my software construction project group at 10:55am. I was late to that.
+                    The project we're working on in software construction is pretty hard, so I decided to procrastinate by working on something else that wasn't as hard,
+                    so I still felt like I was getting stuff done. That something else was making this website.
+                    I had wanted to make one for a while, but swimming on the varsity team and double majoring in Aritificial Intelligence and Mathematics with a minor in Acting at MIT takes a lot of my time.
+                    I made this website with the intention to practice my web development skills and have a professional portfolio, but to be honest I kinda just like writing down my thoughts on this code editor
+                    and seeing it appear all pretty on the website. Haha</p>
+            </section>
 
-        <section id="about">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <p>Your introduction goes here. Share your story, interests, and what drives you.</p>
-            </div>
-        </section>
+            <section id="about">
+                <h2>About Me</h2>
+                <div class="about-content">
+                    <p>White Cheddar Popcorners are the best. They're pretty healthy too. Did you know that 16 chips just amount to 8% DV of fat and 7& DV of sodium?
+                        I could go on forever about food. But I think my next point is more interesting. Andrew Wiggins. Fortnite Mobile. Xbox 360. Ahhhh.
+                    </p>
+                </div>
+            </section>
 
-        <section id="projects">
-            <h2>My Projects</h2>
-            <div class="projects-grid">
-                <!-- Project cards will go here -->
-            </div>
-        </section>
+            <section id="projects">
+                <h2>My Projects</h2>
+                <div class="projects-grid">
+                    <!-- Project cards will go here -->
+                </div>
+            </section>
 
-        <section id="contact">
-            <h2>Get in Touch</h2>
-            <form id="contact-form">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
+            <section id="contact">
+                <h2>Get in Touch</h2>
+                <form id="contact-form">
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" required></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
+                </form>
+            </section>
+        </div>
     </main>
 
     <footer>
