--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <div class="container">
             <section id="home" class="hero">
-                <h1>Hola. Me llamo Natan</h1>
+                <h1>Hey! I'm Nathan.</h1>
                 <img src="images/self_portrait.jpeg" alt="Nathan Zhu" class="profile-pic">
                 <p>Today is May 8th, 2025 (for me right now). I woke up pretty late this morning and decided to back to sleep. Around 10:50am, I decided to get up. I know it was exactly 10:50am because
                     I had a group meeting with my software construction project group at 10:55am. I was late to that.
@@ -40,9 +40,8 @@
             <section id="about">
                 <h2>About Me</h2>
                 <div class="about-content">
-                    <p>White Cheddar Popcorners are the best. They're pretty healthy too. Did you know that 16 chips just amount to 8% DV of fat and 7& DV of sodium?
-                        I could go on forever about food. But I think my next point is more interesting. Andrew Wiggins. Fortnite Mobile. Xbox 360. Ahhhh.
-                    </p>
+                    <p>I am 20 years old and I'm from Lexington, Kentucky.</p>
+                    <img src="images/sunbathe.jpg" alt="Sunbathe" class="about-img">
                 </div>
             </section>
 
